language/move-lang/tests/move_check/expansion/diem_prelude_missing_type.move
address 0x42 {
module M {
    struct S {
        f1: Option::No,
        f2: Signer::No,
        f3: Vector::No,
    }

}
}
